# YOLOv8-TensorRT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.py  config.py  export-seg.py  export.py  export_seg.py  gen_pkl.py  infer-cls-without-torch.py  infer-cls.py  infer-det-without-torch.py  infer-det.py  infer-no-torch.py  infer-obb-without-torch.py  infer-obb.py  infer-pose-without-torch.py  infer-pose.py  infer-seg-without-torch.py  infer-seg.py  infer.py  profile.py  requirements.txt
csrc/cls/normal/: CMakeLists.txt  main.cpp
csrc/cls/normal/include/: common.hpp  yolov8-cls.hpp
csrc/config/: detect_config.hpp
csrc/deepstream/: CMakeLists.txt  README.md  config_yoloV8.txt  deepstream_app_config.txt
csrc/deepstream/custom_bbox_parser/: nvdsparsebbox_yoloV8.cpp
csrc/detect/: CMakeLists.txt
csrc/detect/end2end/: CMakeLists.txt  main.cpp
csrc/detect/end2end/cmake/: FindTensorRT.cmake
csrc/detect/end2end/include/: common.hpp  yolov8.hpp
csrc/detect/include/: config.h  utils.h
csrc/detect/normal/: CMakeLists.txt  main.cpp
csrc/detect/normal/cmake/: Function.cmake
csrc/detect/normal/include/: common.hpp  yolov8.hpp
csrc/detection/include/: config.h  yolov8.hpp
csrc/end2end/: CMakeLists.txt  main.cpp  yolov8.hpp
csrc/end2end/include/: config.h  yolov8.hpp
csrc/jetson/detect/: CMakeLists.txt  main.cpp
csrc/jetson/detect/include/: common.hpp  yolov8.hpp
csrc/jetson/pose/: CMakeLists.txt  main.cpp
csrc/jetson/pose/include/: common.hpp  yolov8-pose.hpp
csrc/jetson/segment/: CMakeLists.txt  main.cpp
csrc/jetson/segment/include/: common.hpp  yolov8-seg.hpp
csrc/obb/normal/: CMakeLists.txt  main.cpp
csrc/obb/normal/include/: common.hpp  yolov8-obb.hpp
csrc/pose/normal/: CMakeLists.txt  main.cpp
csrc/pose/normal/cmake/: Function.cmake
csrc/pose/normal/include/: common.hpp  yolov8-pose.hpp
csrc/segment/: CMakeLists.txt  main.cpp
csrc/segment/include/: common.hpp  config.h  utils.h  yolov8-seg.hpp
csrc/segment/normal/: CMakeLists.txt  main.cpp
csrc/segment/normal/include/: common.hpp  yolov8-seg.hpp
csrc/segment/simple/: CMakeLists.txt  main.cpp
csrc/segment/simple/include/: common.hpp  yolov8-seg.hpp
csrc/yolov7/: README.md
csrc/yolov7/detect/end2end/: CMakeLists.txt
csrc/yolov7/detect/end2end/cmake/: FindTensorRT.cmake
csrc/yolov7/detect/end2end/include/: yolov7.hpp
csrc/yolov7/jetson/: CMakeLists.txt  main.cpp
csrc/yolov7/jetson/include/: yolov8.hpp
docs/: API-Build.md  Cls.md  Jetson.md  Normal.md  Obb.md  Pose.md  Segment.md  star.md
experiment/: det_dynamic.py
models/: __init__.py  api.py  common.py  cudart_api.py  engine.py  pycuda_api.py  torch_utils.py  utils.py
